--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 <div class="main-p3">
 <h1>Calcutta</h1>
 </div></a>
+<a href="./osaka.html">
+<div class="main-p4">
+<h1>Osaka</h1>
+</div></a>
 </body>
 </html>
