--- a/seoul.html
+++ b/seoul.html
@@ -7,9 +7,17 @@
   <title>Seoul</title>
 </head>
 <body>
-  <div class="main-content-seoul">
+  <div class="menu">
+      <p><a href="./index.html">Home</a></p>
+      <p><a href="./seoul.html">Seoul</a></p>
+      <p><a href="./hongkong.html">Hong Kong</a></p>
+      <p><a href="./calcutta.html">Calcutta</a></p>
+      <p><a href="./osaka.html">Osaka</a></p>
   </div>
-
+  <div class="main-content-seoul">
+    <h1>Seoul</h1>
+    <img src="./images/seoul-main.jpg" alt="seoul image" height="500px"/>
+  </div>
 
 
 </body>
