--- a/osaka.html
+++ b/osaka.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="./mycss.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
-  <title>Hong Kong</title>
+  <title>Osaka</title>
 </head>
 <body>
   <div class="menu">
@@ -14,9 +14,9 @@
       <p><a href="./calcutta.html">Calcutta</a></p>
       <p><a href="./osaka.html">Osaka</a></p>
   </div>
-  <div class="main-content-hongkong">
-    <h1>Hong Kong</h1>
-  <img src="./images/hongkong-main.jpg" alt="seoul image" height="500px"/>
+  <div class="main-content-osaka">
+    <h1>Osaka</h1>
+    <img src="./images/osaka-main.jpg" alt="seoul image" height="500px"/>
   </div>
 
 
